config/k8s/admin.yaml
apiVersion: v1
kind: Service
metadata:
  name: admin
spec:
  selector:
    app: admin
  ports:
    - protocol: TCP
      name: admin
      port: 5004
      targetPort: 5004

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin
  labels:
    app: admin
spec:
  minReadySeconds: 10
  selector:
    matchLabels:
      app: admin
  template:
    metadata:
      labels:
        app: admin
    spec:
      containers:
        - name: admin
          image: borntonight/admin:1
          imagePullPolicy: Never
          ports:
            - containerPort: 5004
