config/k8s/grafana.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana
  labels:
    app: grafana
spec:
  ports:
    - port: 3000
      targetPort: 3000
      name: grafana
  selector:
    app: grafana

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
  labels:
    app: grafana
spec:
  selector:
    matchLabels:
      app: grafana
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: grafana
    spec:
      containers:
        - name: grafana
          image: borntonight/grafana:1
          ports:
            - containerPort: 3000
              name: grafana2
          resources:
            requests:
              memory: "450Mi"
              cpu: "200m"
            limits:
              memory: "500Mi"
              cpu: "250m"
