config/k8s/reader.yaml
apiVersion: v1
kind: Service
metadata:
  name: reader
spec:
  selector:
    app: reader
  ports:
    - protocol: TCP
      name: reader
      port: 5002
      targetPort: 5002
    - name: actuator
      port: 5102
      targetPort: 5102

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: reader
  labels:
    app: reader
spec:
  minReadySeconds: 10
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  replicas: 1
  selector:
    matchLabels:
      app: reader
  template:
    metadata:
      labels:
        app: reader
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "5102"
        prometheus.io/path: "/actuator/prometheus"
    spec:
      containers:
        - name: reader
          image: borntonight/reader:1
          imagePullPolicy: Never
          ports:
            - containerPort: 5002
              name: http-api
            - containerPort: 5102
              name: actuator
          resources:
            requests:
              memory: "450Mi"
              cpu: "200m"
            limits:
              memory: "500Mi"
              cpu: "250m"
          startupProbe:
            initialDelaySeconds: 10
            httpGet:
              path: /actuator/health/readiness
              port: 5102
              scheme: HTTP
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 18 # 18*10 = 3 минуты
            successThreshold: 1
          readinessProbe:
            #            initialDelaySeconds: 30 EXPLAIN_V не надо, т.к. есть startupProbe
            httpGet:
              path: /actuator/health/readiness
              port: 5102
              scheme: HTTP
            periodSeconds: 8
            timeoutSeconds: 5
            failureThreshold: 3
            successThreshold: 1
          livenessProbe:
            #            initialDelaySeconds: 90 EXPLAIN_V не надо, т.к. есть startupProbe
            httpGet:
              path: /actuator/health/liveness
              port: 5102
              scheme: HTTP
            periodSeconds: 30
            timeoutSeconds: 5
            failureThreshold: 3
            successThreshold: 1
