config/k8s/writer.yaml
apiVersion: v1
kind: Service
metadata:
  name: writer
spec:
  selector:
    app: writer
  ports:
    - protocol: TCP
      name: writer
      port: 5003
      targetPort: 5003
    - name: actuator
      port: 5103
      targetPort: 5103

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: writer
  labels:
    app: writer
spec:
  minReadySeconds: 10
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  replicas: 2
  selector:
    matchLabels:
      app: writer
  template:
    metadata:
      labels:
        app: writer
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "5103"
        prometheus.io/path: "/actuator/prometheus"
    spec:
      containers:
        - name: writer
          image: borntonight/writer:1
          imagePullPolicy: Never
          ports:
            - containerPort: 5003
              name: http-api
            - containerPort: 5103
              name: actuator
          resources:
            requests:
              memory: "450Mi"
              cpu: "200m"
            limits:
              memory: "500Mi"
              cpu: "250m"
          startupProbe:
            initialDelaySeconds: 10
            httpGet:
              path: /actuator/health/readiness
              port: 5103
              scheme: HTTP
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 18 # 18*10 = 3 минуты
            successThreshold: 1
          readinessProbe:
            #            initialDelaySeconds: 30 EXPLAIN_V не надо, т.к. есть startupProbe
            httpGet:
              path: /actuator/health/readiness
              port: 5103
              scheme: HTTP
            periodSeconds: 8
            timeoutSeconds: 5
            failureThreshold: 3
            successThreshold: 1
          livenessProbe:
            #            initialDelaySeconds: 90 EXPLAIN_V не надо, т.к. есть startupProbe
            httpGet:
              path: /actuator/health/liveness
              port: 5103
              scheme: HTTP
            periodSeconds: 30
            timeoutSeconds: 5
            failureThreshold: 3
            successThreshold: 1
