config/k8s/wrtiter.yaml
apiVersion: v1
kind: Service
metadata:
  name: writer
spec:
  selector:
    app: writer
  ports:
    - protocol: TCP
      name: writer
      port: 5003
      targetPort: 5003

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: writer
  labels:
    app: writer
spec:
  minReadySeconds: 10
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  replicas: 2
  selector:
    matchLabels:
      app: writer
  template:
    metadata:
      labels:
        app: writer
    spec:
      containers:
        - name: writer
          image: borntonight/writer:1
          ports:
            - containerPort: 5003
