config/k8s/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: apps-network-policy
spec:
  podSelector:
    matchExpressions:
      - key: app
        operator: In
        values:
          - main
          - reader
          - writer

  policyTypes:
    - Ingress

  ingress:
    - from:
        - podSelector: {}
      ports:
        - port: http-api  # Имя порта из Deployment/Service

    - from:
        - podSelector:
            matchExpressions:
              - key: app
                operator: In
                values:
                  - admin
                  - prometheus
      ports:
        - port: actuator
